[gd_scene load_steps=14 format=3 uid="uid://by1evkihokebk"]

[ext_resource type="Script" path="res://Scenes/UI/PanelOptions.gd" id="1_08wwp"]
[ext_resource type="Texture2D" uid="uid://bnrlqox3jdxce" path="res://Resources/GUI/MenuBackground.png" id="1_by4j5"]
[ext_resource type="Texture2D" uid="uid://di1217ii04g4e" path="res://Resources/GUI/MultiSlot.png" id="2_id87y"]
[ext_resource type="Texture2D" uid="uid://b4umohwulhj6s" path="res://Resources/GUI/InventoryIcon.png" id="3_6shx3"]
[ext_resource type="Texture2D" uid="uid://dvsgdkfrmduqw" path="res://Resources/GUI/InventoryIconPressed.png" id="4_yhene"]
[ext_resource type="Texture2D" uid="uid://x78x28lptjmg" path="res://Resources/GUI/SkillsIcon.png" id="5_8kobs"]
[ext_resource type="Texture2D" uid="uid://ml22y5x5xpw6" path="res://Resources/GUI/SkillsIconPressed.png" id="6_c4xg4"]
[ext_resource type="Texture2D" uid="uid://bwy5yhxly07e5" path="res://Resources/GUI/EquipIcon.png" id="7_vga3g"]
[ext_resource type="Texture2D" uid="uid://rklrq7s0g46d" path="res://Resources/GUI/EquipIconPressed.png" id="8_1nx5a"]
[ext_resource type="Texture2D" uid="uid://dh2y0b54uj2ms" path="res://Resources/GUI/StatsIcon.png" id="9_syavp"]
[ext_resource type="Texture2D" uid="uid://br6bnaaj0rewq" path="res://Resources/GUI/StatsIconPressed.png" id="10_ua8nt"]
[ext_resource type="Texture2D" uid="uid://fce60slmhtbq" path="res://Resources/GUI/MenuIcon.png" id="11_yy4f5"]
[ext_resource type="Texture2D" uid="uid://dfj8d8d3kthv1" path="res://Resources/GUI/MenuIconPressed.png" id="12_blboe"]

[node name="PanelOptions" type="Control"]
texture_filter = 1
custom_minimum_size = Vector2(28, 140)
layout_mode = 3
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -28.0
offset_top = -70.0
offset_bottom = 70.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_08wwp")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_by4j5")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 26.0
offset_bottom = 205.0

[node name="Inventory" type="TextureRect" parent="TextureRect/VBoxContainer"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
texture = ExtResource("2_id87y")

[node name="Inventory" type="TextureButton" parent="TextureRect/VBoxContainer/Inventory"]
custom_minimum_size = Vector2(22, 22)
layout_mode = 0
offset_left = 1.0
offset_top = 1.00001
offset_right = 23.0
offset_bottom = 23.0
texture_normal = ExtResource("3_6shx3")
texture_pressed = ExtResource("4_yhene")

[node name="Skills" type="TextureRect" parent="TextureRect/VBoxContainer"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
texture = ExtResource("2_id87y")

[node name="Skills" type="TextureButton" parent="TextureRect/VBoxContainer/Skills"]
custom_minimum_size = Vector2(22, 22)
layout_mode = 0
offset_left = 1.0
offset_top = 1.00001
offset_right = 23.0
offset_bottom = 23.0
texture_normal = ExtResource("5_8kobs")
texture_pressed = ExtResource("6_c4xg4")

[node name="Equip" type="TextureRect" parent="TextureRect/VBoxContainer"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
texture = ExtResource("2_id87y")

[node name="Equip" type="TextureButton" parent="TextureRect/VBoxContainer/Equip"]
custom_minimum_size = Vector2(22, 22)
layout_mode = 0
offset_left = 1.0
offset_top = 1.00001
offset_right = 23.0
offset_bottom = 23.0
texture_normal = ExtResource("7_vga3g")
texture_pressed = ExtResource("8_1nx5a")

[node name="Stats" type="TextureRect" parent="TextureRect/VBoxContainer"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
texture = ExtResource("2_id87y")

[node name="Stats" type="TextureButton" parent="TextureRect/VBoxContainer/Stats"]
custom_minimum_size = Vector2(22, 22)
layout_mode = 0
offset_left = 1.0
offset_top = 1.00001
offset_right = 23.0
offset_bottom = 23.0
texture_normal = ExtResource("9_syavp")
texture_pressed = ExtResource("10_ua8nt")

[node name="Menu" type="TextureRect" parent="TextureRect/VBoxContainer"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
texture = ExtResource("2_id87y")

[node name="Menu" type="TextureButton" parent="TextureRect/VBoxContainer/Menu"]
custom_minimum_size = Vector2(22, 22)
layout_mode = 0
offset_left = 1.0
offset_top = 1.00001
offset_right = 23.0
offset_bottom = 23.0
texture_normal = ExtResource("11_yy4f5")
texture_pressed = ExtResource("12_blboe")

[connection signal="pressed" from="TextureRect/VBoxContainer/Inventory/Inventory" to="." method="_on_inventory_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/Skills/Skills" to="." method="_on_skills_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/Equip/Equip" to="." method="_on_equip_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/Stats/Stats" to="." method="_on_stats_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/Menu/Menu" to="." method="_on_menu_pressed"]
